reformated comment form validation, pinned horizontal scroll to bottom of page and only visible if needed (5+ workstates), corrected time stamp on comment submission

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10913,7 +10913,8 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   }
 }
 .dashboard-scroll {
-    overflow-x: scroll;
+    overflow-x: auto;
     width: 100%;
+    height: 93vh;
 }
 }
